tests/fixtures/typecheck/invalid/bad_comparison_types.sr
rule "EQ: Bad Comparison Types" in underlying:
    when bar.close > "100":
        then emit_signal(kind="X", reason="bad_compare")
